<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_CONVERTERS_COMMON" Id="{b6ea3c6c-b1e1-4e40-b042-7d8d8a70ab1d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	CONVERTER_STATUS_RUN:	WORD:= 1; //Status told by the inverter when injecting P and Q
	Plant_capacity:			REAL:= 4000; //Total capacity in kVA
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>